<resources>
    <string name="app_name">下拉缩放</string>
    <string name="info_confirm_to_exit">确定要退出今日头条?</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="REQUEST_PERMISSION_DENIED">没有获得权限，部分功能将无法开启</string>
    <string name="REQUEST_PERMISSION_DENIED_DESCRIPTION">该功能需要：【%1$s】权限，请点击【确定】在【应用信息】>【权限】标签里开启</string>
    <string name="REQUEST_PERMISSION_DENIED_TITLE">权限授予</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_CAMERA">相机</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_CONTACT">通讯录</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_EXTERNAL_STORAGE">存储</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_LOCATION">位置信息</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_READ_PHONE_STATE">拨打电话</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_RECORD_AUDIO">麦克风</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_SMS">短信</string>
    <string name="REQUEST_PERMISSION_GRANTED">已经获得权限，请重新点击</string>
    <string name="REQUEST_PERMISSION_REMINDER">未授予该权限</string>
    <string name="REQUEST_PERMISSION_UPDATE_RESTART">权限变更，请长按菜单键，关闭应用后，重新进入</string>
    <string name="account_account_bind">账号绑定</string>
    <string name="account_account_cancel_bind">取消绑定</string>
    <string name="account_account_click_bind">点击绑定</string>
    <string name="account_account_logout">退出登录</string>
    <string name="account_agree_user_agreement">同意今日头条用户协议</string>
    <string name="account_auth_and_login">验证登录</string>
    <string name="account_auth_code_error">验证码错误</string>
    <string name="account_auto_register_hint">未注册的用户会自动注册</string>
    <string name="account_auto_register_tips">未注册手机验证后自动注册</string>
    <string name="account_avatar_upload_fail">头像上传失败</string>
    <string name="account_btn_cancel">取消</string>
    <string name="account_btn_ok">确定</string>
    <string name="account_change_password_hint">修改密码：&lt;我>-&lt;设置>-&lt;帐号管理></string>
    <string name="account_commit">提交</string>
    <string name="account_complete_with_space">完 成</string>
    <string name="account_confirm_and_logout">确定并退出</string>
    <string name="account_confirm_btn_txt">进入头条</string>
    <string name="account_confirm_give_up_register">确认放弃登录？</string>
    <string name="account_confirm_to_use_default_name">确认使用头条默认用户名“%s”？</string>
    <string name="account_continue_register">继续登录</string>
    <string name="account_desc_dialog_title">修改签名</string>
    <string name="account_desc_of_pgc_bottom_tips">10-30个汉字</string>
    <string name="account_desc_same_as_last">与原来介绍相同</string>
    <string name="account_dialog_title_default">"登录你的头条
精彩永不丢失"</string>
    <string name="account_dialog_title_favor">"登录并同步收藏
云端永久保存！"</string>
    <string name="account_dialog_title_pgc_like">"登录并同步关注
云端永久保存！"</string>
    <string name="account_dialog_title_register">"登录后保存阅读习惯
打造你的专属头条"</string>
    <string name="account_free_password_login">验证码登录</string>
    <string name="account_give_up">放弃</string>
    <string name="account_give_up_original_account">放弃原账号</string>
    <string name="account_go_to_modify">去修改</string>
    <string name="account_has_account">已有账号？</string>
    <string name="account_has_sent_auth_code">已向手机%s发送验证码</string>
    <string name="account_input_auth_code">输入验证码</string>
    <string name="account_item_desc">介绍</string>
    <string name="account_item_female">女</string>
    <string name="account_item_gender">性别</string>
    <string name="account_item_head">头像</string>
    <string name="account_item_male">男</string>
    <string name="account_item_name">姓名</string>
    <string name="account_left_number">剩余%1$d字</string>
    <string name="account_login_success">登录成功</string>
    <string name="account_manager_bind_third_tips">社交平台账号绑定</string>
    <string name="account_manager_bind_title">账号和绑定设置</string>
    <string name="account_manager_change_profile_back_img">更换个人主页背景</string>
    <string name="account_manager_edit_profile">编辑资料</string>
    <string name="account_manager_profile_verify_tips">个人资料每月只能修改一次，且需要经过审核</string>
    <string name="account_manager_save_profile">保存</string>
    <string name="account_manager_save_profile_tips">每个月只能修改一次，确认保存修改后的资料吗?</string>
    <string name="account_manager_verify_status">审核中</string>
    <string name="account_mobile_login">手机登录</string>
    <string name="account_mobile_num_error">手机号错误</string>
    <string name="account_modify_left_number">-%1$d</string>
    <string name="account_more_login_ways">更多登录方式</string>
    <string name="account_need_password_tips">尚未设置密码，为保证安全，将验证手机号并设置密码</string>
    <string name="account_no_account_error">手机号尚未注册，是否免密码快捷登录？</string>
    <string name="account_password_error">密码错误</string>
    <string name="account_password_login">账号密码登录</string>
    <string name="account_previous">上一步</string>
    <string name="account_quick_dialog_title_default">登录你的专属头条</string>
    <string name="account_quick_dialog_title_favor">登录后收藏永不丢失</string>
    <string name="account_quick_dialog_title_pgc_like">登录后关注永久保存</string>
    <string name="account_quick_dialog_title_post">登录后立即畅谈</string>
    <string name="account_quick_dialog_title_social">登录关注更多好友动态</string>
    <string name="account_quick_register">快捷注册</string>
    <string name="account_register_tips">"云端同步兴趣
精彩收藏永不丢失"</string>
    <string name="account_resend_auth_code">再次向手机%s发送验证码？</string>
    <string name="account_send_auth_code">发送验证码</string>
    <string name="account_set_password">设置密码</string>
    <string name="account_set_password_success">密码设置成功</string>
    <string name="account_skip">跳过</string>
    <string name="account_update_desc_success">签名修改成功</string>
    <string name="account_update_user_name_success">修改用户名成功</string>
    <string name="account_upload_avatar_fail">头像修改失败,请稍后再试</string>
    <string name="account_upload_avatar_success">头像修改成功</string>
    <string name="account_use">使用</string>
    <string name="account_verify">验证</string>
    <string name="account_verify_mobile_num">验证手机号</string>
    <string name="action_add_to_desktop">添加到桌面</string>
    <string name="action_alipay_share">支付宝好友</string>
    <string name="action_alishq_share">支付宝生活圈</string>
    <string name="action_big_font">大</string>
    <string name="action_copy">复制正文</string>
    <string name="action_copy_url">复制链接</string>
    <string name="action_day_mode">日间模式</string>
    <string name="action_dd_share">钉钉好友</string>
    <string name="action_decrease">-1</string>
    <string name="action_dislike">不感兴趣</string>
    <string name="action_edit">编辑</string>
    <string name="action_facebook_share">facebook</string>
    <string name="action_favor">收藏</string>
    <string name="action_follow_pgc">关注</string>
    <string name="action_font_setting">显示设置</string>
    <string name="action_forward">一键分享</string>
    <string name="action_html_share">转发内容</string>
    <string name="action_increase">+1</string>
    <string name="action_kaixin_share">开心网</string>
    <string name="action_large_font">特大</string>
    <string name="action_like">关心</string>
    <string name="action_mail_share">邮件</string>
    <string name="action_medium_font">中</string>
    <string name="action_message_share">短信</string>
    <string name="action_my_update">我的动态</string>
    <string name="action_mz_favor">收藏</string>
    <string name="action_mz_unfavor">取消收藏</string>
    <string name="action_night_mode">夜间模式</string>
    <string name="action_qq_share">QQ好友</string>
    <string name="action_qzone_share">QQ空间</string>
    <string name="action_renren_share">人人网</string>
    <string name="action_report">举报</string>
    <string name="action_small_font">小</string>
    <string name="action_system_share">转发链接</string>
    <string name="action_tecent_share">腾讯微博</string>
    <string name="action_twitter_share">twitter</string>
    <string name="action_unfollow_pgc">取消关注</string>
    <string name="action_unlike">取消关心</string>
    <string name="action_view_pgc">查看头条号</string>
    <string name="action_weibo_share">新浪微博</string>
    <string name="action_weixin_share">微信好友</string>
    <string name="action_weixin_timeline">微信朋友圈</string>
    <string name="actionad_action_text">立即拨打</string>
    <string name="ad_label_detail">查看详情</string>
    <string name="ad_label_download">安装</string>
    <string name="ad_label_info">广告</string>
    <string name="ad_label_launch">打开</string>
    <string name="ad_label_new">广告</string>
    <string name="add_avatar">添加头像</string>
    <string name="add_more_pgc_follow">关注更多头条号</string>
    <string name="add_more_pgc_subscribe">订阅更多头条号</string>
    <string name="add_pgc_follow">添加关注</string>
    <string name="add_pgc_subscribe">添加订阅</string>
    <string name="add_tag_hint">添加问题标签(必填)</string>
    <string name="add_tag_max_limit">最多添加5个标签</string>
    <string name="add_tag_min_limit">至少添加1个标签</string>
    <string name="add_tag_title">添加标签</string>
    <string name="add_to_desktop_success">添加成功</string>
    <string name="add_topic">转发到话题</string>
    <string name="adsapp_button_cancel">取消</string>
    <string name="adsapp_button_download">免费下载</string>
    <string name="adsapp_button_web">网页体验</string>
    <string name="adsapp_default_info">暂无更新，点击体验其他精彩应用 ></string>
    <string name="adsapp_tip_app">您尚未安装 %1$s,是否免费下载?</string>
    <string name="adsappitem_download_info">要下载 %1$s 吗？%2$s</string>
    <string name="adsappitem_download_this_app">这个应用</string>
    <string name="adverise_tag">广告</string>
    <string name="agree">"  同意"</string>
    <string name="album">相册</string>
    <string name="album_count_prefix">个视频</string>
    <string name="album_title">合辑</string>
    <string name="album_title_prefix">合辑：%s</string>
    <string name="alipay_not_install">您未安装支付宝</string>
    <string name="alipay_not_support_share">您当前的支付宝版本不支持分享</string>
    <string name="all_answer_num">全部%1$d个回答</string>
    <string name="all_comments">全部回帖</string>
    <string name="all_content">全文</string>
    <string name="all_image">所有照片</string>
    <string name="already_bury">你已经踩过</string>
    <string name="already_digg">你已经顶过</string>
    <string name="already_digg_text">赞</string>
    <string name="answer_delete_confirm_cancel">取消</string>
    <string name="answer_delete_confirm_content">确定需要删除？</string>
    <string name="answer_delete_confirm_delete">删除</string>
    <string name="answer_delete_hint">此答案已删除</string>
    <string name="answer_editor_confirm_content">确认退出，已撰写回答会保存草稿</string>
    <string name="answer_editor_confirm_continue">继续写</string>
    <string name="answer_editor_confirm_quit">退出</string>
    <string name="answer_editor_content_empty_hint">没有内容不能发布</string>
    <string name="answer_editor_content_not_enough">回答字数不能低于%1$d字</string>
    <string name="answer_editor_draft_saved">草稿已保存</string>
    <string name="answer_editor_draft_saving">正在保存草稿…</string>
    <string name="answer_editor_hint">不认真的答案会被折叠哦~~</string>
    <string name="answer_editor_image_insert_fail">插入图片失败，请重试</string>
    <string name="answer_editor_img_confirm_content">最多上传10张图片，登录wenda.toutiao.com可撰写更多内容</string>
    <string name="mine_item_favorite">收藏</string>
    <string name="mine_item_night_mode">夜间</string>
    <string name="mine_item_settings">设置</string>
    <string name="mine_login_hint">登录推荐更精准</string>
    <string name="mine_tab_followers_title">粉丝</string>
    <string name="mine_tab_followings_title">关注</string>
    <string name="mine_tab_visitors_title">7天访客</string>
</resources>